--- a/3dlife/styles/main.css
+++ b/3dlife/styles/main.css
@@ -39,4 +39,20 @@ button:hover {
     display: flex;
     flex-direction: column;
     gap: 5px;
+}
+
+.slider-container {
+    margin: 10px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+}
+
+.slider-container label {
+    margin-bottom: 5px;
+}
+
+input[type="range"] {
+    width: 200px;
 } 
